--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,40 @@
-# === Python / Django ===
-*.pyc
-__pycache__/
-*.pyo
-*.pyd
-*.swp
-*.bak
-*.log
-
-# Django migrations
-**/migrations/
-!*/migrations/__init__.py
-
-# Django local settings
-.env
-.env.*
-.DS_Store
-
-# Media / Static files
-/media/
-/staticfiles/
-/static/
-
-# VS Code
-.vscode/
-
-# Pytest / coverage
-htmlcov/
-.coverage
-.tox/
-.nox/
-.pytest_cache/
-
-# # === Node.js / React ===
-# node_modules/
-# build/
-# dist/
-# .npm/
-# .cache/
+# # === Python / Django ===
+# *.pyc
+# __pycache__/
+# *.pyo
+# *.pyd
+# *.swp
+# *.bak
 # *.log
-# .env.local
-# .env.development.local
-# .env.test.local
-# .env.production.local
 
-# # React specific
-# *.tgz
-# *.lock
-# yarn.lock
-# package-lock.json
+# # Django migrations
+# **/migrations/
+# !*/migrations/__init__.py
 
-# === OS specific ===
-.DS_Store
-Thumbs.db
+# # Django local settings
+# .env
+# .env.*
+# .DS_Store
+
+# # Media / Static files
+# /media/
+# /staticfiles/
+# /static/
+
+# # VS Code
+# .vscode/
+
+# # Pytest / coverage
+# htmlcov/
+# .coverage
+# .tox/
+# .nox/
+# .pytest_cache/
+
+
+# # === OS specific ===
+# .DS_Store
+# Thumbs.db
 
 
 
